package org.example;

/**
 * Seleccion del tipo de reunion
 */
public enum TipoReunion {
    TECNICA(),
    MARKETING(),
    OTRO();
}
